--- a/index.html
+++ b/index.html
@@ -26,15 +26,20 @@
             <div class="col-md-6">
                 <div class="h2">Add Contact:
                     <form action="" id="new-contact" method="post">
-                        <div class="form-group">
-                            <label for="newFirstName">First Name:</label>
+                        <div class="form-group lead">
+                            <label for="newFirstName">First Name</label>
                             <input type="text" class="form-control" name="" id="newFirstName">
                         </div>
-                        <div class="form-group">
-                            <label for="newLastName">Last Name:</label>
+                        <div class="form-group lead">
+                            <label for="newLastName">Last Name</label>
                             <input type="text" class="form-control" name="" id="newLastName">
                         </div>
+                        <button type="submit" class="btn btn-primary">Add</button>
                     </form>
+                    <div class="h2">Contacts:</div>
+                    <ul id="contacts">
+                        
+                    </ul>
                 </div>
             </div>
         </div>
