fix: code refacor

--- a/index.html
+++ b/index.html
@@ -37,13 +37,20 @@
                         <button type="submit" class="btn btn-primary">Add</button>
                     </form>
                     <div class="h2">Contacts:</div>
-                    <ul id="contacts">
-                        
+                    <ul id="contacts" class="lead">
+
                     </ul>
                 </div>
             </div>
+            <!-- showing the contact -->
+            <div class="col-md-6">
+                <div id="showContact">
+                    <h2></h2>
+                    <p>First Name : <span class="first-name"></span> </p>
+                    <p>Second Name : <span class="last-name"></span> </p>
+                </div>
+            </div>
         </div>
-        <form action="" method="post">
 
         </form>
     </section>
