Added an email and city input

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
                             <label for="newLastName">Last Name</label>
                             <input type="text" class="form-control" name="" id="newLastName">
                         </div>
+                        <div class="form-group lead">
+                          <label for="emailAddress">Email Address</label>
+                          <input type="email" class="form-control" name="" id="emailAddress">
+                      </div>
+                      <div class="form-group lead">
+                        <label for="city">City</label>
+                        <input type="text" class="form-control" name="" id="city">
+                    </div>
                         <button type="submit" class="btn btn-primary">Add</button>
                     </form>
                     <div class="h2">Contacts:</div>
