--- a/index.html
+++ b/index.html
@@ -1,104 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Address Book</title>
-  </head>
 
-  <body>
-    <section class="container">
-        <div class="h1">Address Book</div>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="h2">Add Contact:
-                    <form action="" id="new-contact" method="post">
-                        <div class="form-group lead">
-                            <label for="newFirstName">First Name</label>
-                            <input type="text" class="form-control" name="" id="newFirstName">
-                        </div>
-                        <div class="form-group lead">
-                            <label for="newLastName">Last Name</label>
-                            <input type="text" class="form-control" name="" id="newLastName">
-                        </div>
-                        <div class="form-group lead">
-                          <label for="emailAddress">Email Address</label>
-                          <input type="email" class="form-control" name="" id="emailAddress">
-                      </div>
-                      <div class="form-group lead">
-                        <label for="city">City</label>
-                        <input type="text" class="form-control" name="" id="city">
-                    </div>
-                        <button type="submit" class="btn btn-primary">Add</button>
-                    </form>
-                    <div class="h2">Contacts:</div>
-                    <ul id="contacts" class="lead">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Address Book</title>
+</head>
 
-                    </ul>
-                </div>
+<body>
+  <section class="container">
+    <div class="h1">Address Book</div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="h2">Add Contact:
+          <form action="" id="new-contact" method="post">
+            <div class="form-group lead">
+              <label for="newFirstName">First Name</label>
+              <input type="text" class="form-control" name="" id="newFirstName">
             </div>
-            <!-- showing the contact -->
-            <div class="col-md-6">
-                <div id="showContact">
-                    <h2></h2>
-                    <p>First Name : <span class="first-name"></span> </p>
-                    <p>Second Name : <span class="last-name"></span> </p>
-                </div>
+            <div class="form-group lead">
+              <label for="newLastName">Last Name</label>
+              <input type="text" class="form-control" name="" id="newLastName">
             </div>
+            <div class="form-group lead">
+              <label for="Address">Street Address</label>
+              <input type="text" class="form-control" name="" id="newAddress">
+            </div>
+            <div class="form-group lead">
+              <label for="city">City</label>
+              <input type="text" class="form-control" name="" id="newCity">
+            </div>
+            <div class="form-group lead">
+              <label for="county">County</label>
+              <input type="text" class="form-control" name="" id="newCounty">
+            </div>
+            <span class="btn btn-primary" id="addAddress">Another Address</span>
+            <button type="submit" class="btn">Add</button>
+          </form>
+          <div class="h2">Contacts:</div>
+          <ul id="contacts" class="lead">
+
+          </ul>
         </div>
+      </div>
+      <!-- showing the contact -->
+      <div class="col-md-6">
+        <div id="showContact">
+          <h2></h2>
+          <p>First Name : <span class="first-name"></span> </p>
+          <p>Second Name : <span class="last-name"></span> </p>
+          <p>Addresses</p>
+          <ul id="id">addresses</ul>
+        </div>
+      </div>
+    </div>
 
-        </form>
-    </section>
+    </form>
+  </section>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+  </script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
+</body>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
-    <script src="js/script.js"></script>
-  </body>
 </html>
