--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <p>First Name : <span class="first-name"></span> </p>
           <p>Second Name : <span class="last-name"></span> </p>
           <p>Addresses</p>
-          <ul id="id">addresses</ul>
+          <ul id="addresses"></ul>
         </div>
       </div>
     </div>
